--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev && echo'",
+    "dev": "next dev",
     "build": "next build",
     "db-dev-set": "npx prisma migrate dev && npx prisma generate && npx prisma migrate dev",
     "db-dev-push": "npx prisma db push",
