--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-environment-jsdom": "^29.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
+    "sass": "^1.55.0",
     "typescript": "4.8.3"
   }
 }
