--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "chalk": "^5.1.0",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1"
