--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "test": "jest test --watchAll --verbose"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
+    "metadata-scraper": "^0.2.61",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "next-transpile-modules": "^9.0.0",
