--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.1.0",
@@ -33,6 +34,7 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
