--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tasker",
   "version": "0.1.0",
   "private": true,
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
