--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "format": "prettier --write .",
     "test-all": "yarn run check-format && yarn run check-lint && npm run check-types &&  yarn run test --watchAll=false && yarn build",
     "prepare": "husky install",
-    "test": "jest test --watchAll --verbose"
+    "test": "jest test --watchAll --verbose",
+    "heroku-postbuild": "yarn prisma migrate deploy && yarn prisma generate"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
