--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "swr": "^1.3.0",
     "ts-node": "^10.9.1"
   },
