--- a/package.json
+++ b/package.json
@@ -36,23 +36,28 @@
     "chalk": "^5.1.0",
     "cheerio": "^1.0.0-rc.12",
     "metadata-scraper": "^0.2.61",
+    "multer": "^1.4.5-lts.1",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
+    "next-connect": "^0.13.0",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "swr": "^1.3.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
