--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@reduxjs/toolkit": "^1.8.6",
+    "@splinetool/react-spline": "^2.2.3",
+    "@splinetool/runtime": "^0.9.143",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.1.0",
