--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.0.1",
     "chalk": "^5.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "gsap": "^3.11.3",
     "metadata-scraper": "^0.2.61",
     "multer": "^1.4.5-lts.1",
     "next": "12.2.5",
