--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -48,6 +49,7 @@
     "react-dom": "18.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "swiper": "^8.4.5",
     "swr": "^1.3.0",
     "three": "^0.146.0",
     "ts-node": "^10.9.1",
