--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-connect": "^0.13.0",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
@@ -62,6 +63,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
     "eslint": "8.23.1",
