--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
-  "useTabs": false
+  "useTabs": false,
+  "endOfLine": "crlf"
 }
