--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-auth": "^4.10.3",
     "next-connect": "^0.13.0",
     "next-transpile-modules": "^9.0.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
@@ -63,6 +64,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "^18.0.25",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
