--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,2 @@
-name: Releases
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  changelog:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: conventional Changelog Action
-        id: changelog
-        uses: TriPSs/conventional-changelog-action@v3.7.1
-        with:
-          github-token: $
-          # skip-version-file: 'true'
-
-      - name: create release
-        uses: actions/create-release@v1
-        if: $
-        env:
-          GITHUB_TOKEN: $
-        with:
-          tag_name: $
-          release_name: $
-          body: $
+- name: Release Changelog Builder
+  uses: mikepenz/release-changelog-builder-action@v3.6.1
