--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
@@ -79,7 +81,10 @@
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
     "sass": "^1.55.0",
-    "typescript": "^4.9.3"
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-scss": "^4.4.0",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": "16.13.0"
